# apply-tools

./: .gitignore  README.md  USA.html  dev.md  job_tracker_app_data.xlsx  start.sh  stop.sh
.claude/: settings.local.json
agent_server/: .env.example  CONTRACTS.md  __init__.py  config.py  log.py  pyproject.toml
agent_server/agents/: contact.py  deps.py  discovery.py  llm.py  research.py  roster.py
agent_server/agents/sources/: producthunt.py  rss.py  yc.py
agent_server/api/: app.py  main.py
agent_server/contracts/: __init__.py  records.py
agent_server/db/: PLATFORM_MIGRATION.md  agent_db.py  deep_research_migration.sql  platform_migration.sql
agent_server/migrations/: 0001_init.sql  0002_skipped_count.sql  run.py
agent_server/orchestrator/: loop.py  runner.py
agent_server/stages/: dedup.py  deliver.py  fit_gate.py  normalize.py  platform_client.py  verify.py
agent_server/web/: __init__.py  ddg_search.py  page_fetch.py  verifier.py
backend/: .env.example  db.py  frontend_log_filter.py  generate.py  import_csv.py  import_html.py  latex_utils.py  log.py  mail.py  migrate_dates_to_ms.py  migrate_normalize_applied_dates.py  migrate_sqlite_to_postgres.py  requirements.txt  resume_ai.py  resume_render.py  resume_template.tex  server.py  template.tex  tracking.py
docs/: dev.md  dev_new.md
extension/: manifest.json  popup.css  popup.html  popup.js
frontend/: .env.example  DESIGN_SPEC.md  package-lock.json  package.json
resources/: sheet.css
tests/: conftest.py  test_agent_db.py  test_api.py  test_contact.py  test_dedup.py  test_deliver.py  (+9 more)
(+81 files in other folders)
