[project]
name = "lead-agent-server"
version = "0.1.0"
description = "Standalone lead-generation agent service (discovery + research + verify + deliver)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "anthropic>=0.39.0",
    # web tooling
    "ddgs>=6.0.0",
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",       # headless, JS-heavy content pages only
    "feedparser>=6.0.0",        # funding RSS
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",            # httpx mocking in tests
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["agent_server*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = [".."]
asyncio_mode = "auto"
